--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta name="robots" content="index,follow,noodp,noydir" />
   <meta name="revisit-after" content="1 week" />
   <meta name="language" content="Portuguese">
-  <meta name="keywords" value="Gab, Premiiado, Gabriel, Gabriel de Sousa, Gabriel, plugins, sites, minecraft, minecraft coding, spigot, bungeecord, waterfall, servidor, sistemas, plugins, plugin, java, bukkit, rodrigo, carvalho, duck, carai, pato, server, fantasy, fantasyhosting, fantasyhost, hypehost, hypehosting, hype, host, site, web, battlehost, battle, netherhost, nether, rodrigo carvalho, rodrigo, carvalho, whiteservices, white, services, auzani, tornearia rauen, torneados, redeplasma, rede, plasma, tubebridge, tube, bridge, ultra, ultracraft, ultra craft, flux cdn, fluxcdn, over, over host, overhosting, sync, sync host, synchost, atwex, atwex host, atwexhost, jhdev, jh dev, deadly, rede deadly, rededeadly">
+  <meta name="keywords" value="Gab, EstHosting, esthost, est, istevu, Premiiado, Gabriel, Gabriel de Sousa, Gabriel, plugins, sites, minecraft, minecraft coding, spigot, bungeecord, waterfall, servidor, sistemas, plugins, plugin, java, bukkit, rodrigo, carvalho, duck, carai, pato, server, fantasy, fantasyhosting, fantasyhost, hypehost, hypehosting, hype, host, site, web, battlehost, battle, netherhost, nether, rodrigo carvalho, rodrigo, carvalho, whiteservices, white, services, auzani, tornearia rauen, torneados, redeplasma, rede, plasma, tubebridge, tube, bridge, ultra, ultracraft, ultra craft, flux cdn, fluxcdn, over, over host, overhosting, sync, sync host, synchost, atwex, atwex host, atwexhost, jhdev, jh dev, deadly, rede deadly, rededeadly">
   <meta name="theme-color" value="#4360EF">
   <meta name="rating" content="general">
   <meta name="distribution" content="global">
